# gh-pr-tracker

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/gh_pr_tracker/: __init__.py  __main__.py  cli.py  config.py  github.py  model.py  render.py  state.py  tracker.py
tests/: conftest.py  test_cli.py  test_config.py  test_github.py  test_render.py  test_state.py  test_tracker.py
